test/tests/errors/error-record-removed-from-environment.sm
// true
// false
/**/
/**/

program {
    record person(name, age);
    person.age = 22;
    output age;
}